@@ -138,6 +138,7 @@ public class OXCalendarException extends OXException {
         RECURRING_EXCEPTION_MOVE_EXCEPTION("You can not move one element of a recurring appointment into another folder.", 66, AbstractOXException.Category.USER_INPUT),
         UPDATE_EXCEPTION("Fatal error. An database update exception occurred.", 67, AbstractOXException.Category.INTERNAL_ERROR),
         MOVE_TO_SHARED_FOLDER_NOT_SUPPORTED("Move not allowed to a shared folders if the private flag is set", 68, AbstractOXException.Category.USER_INPUT),
+        RECURRING_EXCEPTION_PRIVATE_FLAG("You can not use different private flags for one element of a recurring appointment", 69, AbstractOXException.Category.USER_INPUT),
         ;
         
         /**
