@@ -1,3 +1,10 @@
+* 2007-08-14 - martin.kauss@open-xchange.com
+
+ - Fixed bug #8567. An exception of a recurring appointment could be moved
+   into a different folder than the main object. This will now be avoided.
+   In addition an exception can not have a different private state than the
+   main object.
+
 * 2007-08-14 - tobias.prinz@open-xchange.com
 
  - Bugfix #6825: Implemented new classes for translating fieldnames for
